--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
+    "formik": "^2.4.6",
+    "framer-motion": "^11.5.4",
+    "next": "15.4.5",
+    "next-i18next": "^15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.5"
+    "sweetalert2": "^11.14.5",
+    "swiper": "^11.1.14",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.4.5",
-    "@eslint/eslintrc": "^3"
+    "eslint-config-next": "15.4.5"
   }
 }
